--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "axewert<secret4talk@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.42.0",
