--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "declaration": true
+  },
+  "include": ["src/**/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
