--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
   }
 }
