--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "@types/three": "^0.130.1",
+    "dotenv": "^10.0.0",
+    "three": "^0.130.1"
   }
 }
