--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.0",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
+    "node-sass": "^6.0.1",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
@@ -23,6 +29,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/node-sass": "^4.11.2",
     "@types/three": "^0.130.1",
     "dotenv": "^10.0.0",
     "three": "^0.130.1"
