--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
+    "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
