--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "@types/node-sass": "^4.11.2",
     "@types/three": "^0.130.1",
+    "cannon-es": "^0.18.0",
     "dotenv": "^10.0.0",
     "three": "^0.130.1"
   }
