--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
+    "lib": ["dom","webworker"]
   },
   "include": ["src/**/**/*", "./modulesDeclarations.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
